# bad_email

./: Cargo.toml  LICENSE  README.md
src/: config.rs  default_email_list.toml  domain_checker.rs  lib.rs
